# chat-api

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  bandit.baseline.json  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-branch-dev.yml  deploy-environment.yml  deploy-prod.yml  quality-ratchet.yml  release.yml
.quality/: baseline.json
app/: __init__.py  config.py  cost.py  db.py  guards.py  llm_router.py  main.py  metrics.py  models.py  prompt.py  retriever.py  router.py  sse.py  user_identity.py  wiki_loader.py
app/judge/: __init__.py  cli.py  prompts.py  runner.py
docs/: quality-gate.md
docs/superpowers/plans/: 2026-05-11-quality-gate.md  2026-06-02-app-chat-api.md  2026-06-02-app-nossagrana.md  2026-06-02-app-nossalista.md  2026-06-02-fase0-infra.md
docs/superpowers/specs/: 2026-06-02-app-dashboards-design.md
k8s/dev/: configmap.yaml  cronjob-judge.yaml  cronjob-rotate-session.yaml  deployment.yaml  ingress.yaml  namespace.yaml  prometheusrule.yaml  pvc.yaml  role-rotate-session.yaml  rolebinding-rotate-session.yaml  sa-rotate-session.yaml  secret.template.yaml  service.yaml  servicemonitor.yaml
k8s/monitoring/: README.md  recording-rules.yaml  secret.template.yaml  values.yaml
k8s/monitoring/dashboards/: chat-api-finops.json  chat-api-operations.json  chat-api-quality.json  chat-api.json  nossagrana.json  nossalista.json
k8s/monitoring/prometheusrules/: nossagrana.yaml
k8s/monitoring/servicemonitors/: nossagrana.yaml
k8s/monitoring/sql/: grafana_ro_nossagrana.sql  grafana_ro_nossalista.sql
k8s/nossalista/: prometheusrule.yaml  servicemonitor.yaml
k8s/prod/: configmap.yaml  cronjob-judge.yaml  cronjob-rotate-session.yaml  deployment.yaml  ingress.yaml  namespace.yaml  prometheusrule.yaml  pvc.yaml  role-rotate-session.yaml  rolebinding-rotate-session.yaml  sa-rotate-session.yaml  secret.template.yaml  service.yaml  servicemonitor.yaml
scripts/: quality.sh  update_baseline.sh
tests/: conftest.py  test_chat_stream.py  test_cost.py  test_db.py  test_guards.py  test_judge.py  test_llm_router.py  test_metrics.py  test_retriever.py  test_router.py  test_traceability.py  test_traffic.py  test_user_identity.py  test_wiki_loader.py
wiki-fixture/: AGENTS.md  README.md  index.md
wiki-fixture/entities/: ebix.md
wiki-fixture/projects/: openclaw.md
wiki-fixture/raw/: README.md
wiki-fixture/wiki/entities/: wiley.md
wiki-fixture/wiki/skills/: backend.md
